fix(list-details): prevent overflow

--- a/projects/element-ng/list-details/si-list-pane-body/si-list-pane-body.component.scss
+++ b/projects/element-ng/list-details/si-list-pane-body/si-list-pane-body.component.scss
@@ -4,4 +4,5 @@
   flex-direction: column;
   justify-content: space-between;
   max-inline-size: 100%;
+  overflow-y: auto;
 }
